<resources>
    <string name="app_name">ToDoApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_add_task">Add Task</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="tag">Tag</string>
    <string name="fab_content">Done</string>
    <string name="date">Date</string>
    <string name="text_greeting">Best place for saving and arrange your work</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="or_sign_in_with">Or sign in with</string>
    <string name="dont_have_account">Don\'t have an account? <font color='#0000FF'>Sign up</font></string>
    <string name="content_description_search">Search</string>
    <string name="search">Search</string>
    <string name="more">More</string>
    <string name="content_description_more">More</string>
    <string name="work_progress">Work Progress</string>
    <string name="random_text">Random</string>
    <string name="text_edit_task">Edit Task</string>
    <string name="project">Project</string>
    <string name="deadline">Deadline</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="text_add_project">Add Project</string>

</resources>