<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.authentication.greeting.GreetingFragment">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lav_actionBar"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3"
        app:lottie_autoPlay="true"
        app:lottie_fileName="anim_greeting.json"
        app:lottie_loop="true" />

    <TextView
        android:id="@+id/text_greeting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_20dp"
        android:fontFamily="monospace"
        android:gravity="center_horizontal"
        android:text="@string/text_greeting"
        android:textColor="@color/main_background"
        android:textSize="@dimen/size_24sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/lav_actionBar" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_login_greeting"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size50dp"
        android:layout_marginStart="@dimen/size50dp"
        android:layout_marginTop="@dimen/size50dp"
        android:layout_marginEnd="@dimen/size50dp"
        android:backgroundTint="@color/btn_login_color"
        android:fontFamily="sans-serif-medium"
        android:text="@string/login"
        android:textColor="@color/white"
        app:cornerRadius="@dimen/size_5dp"
        app:layout_constraintTop_toBottomOf="@id/text_greeting" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_register_greeting"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size50dp"
        android:layout_marginStart="@dimen/size50dp"
        android:layout_marginTop="@dimen/size_10dp"
        android:layout_marginEnd="@dimen/size50dp"
        android:backgroundTint="@color/white"
        android:fontFamily="sans-serif-medium"
        android:text="@string/register"
        android:textColor="@color/btn_login_color"
        app:cornerRadius="@dimen/size_5dp"
        app:layout_constraintTop_toBottomOf="@id/btn_login_greeting"
        app:strokeColor="@color/btn_login_color"
        app:strokeWidth="2dp" />

</androidx.constraintlayout.widget.ConstraintLayout>