<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background"
    tools:context=".ui.main.edit_task.EditTaskFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/text_edit_task"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/margin_start"
            android:layout_marginTop="@dimen/margin_start"
            android:fontFamily="monospace"
            android:text="@string/text_edit_task"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_edit_task_project"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_10dp"
            android:hint="@string/project"
            android:textColorHint="@color/color_text_add_task"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:boxStrokeColor="@drawable/material_edit_text_stroke_color"
            app:boxStrokeWidth="2dp"
            app:hintTextColor="@color/color_text_add_task"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_edit_task">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_task_project"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="monospace"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="textCapSentences"
                android:maxLines="1"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textCursorDrawable="@drawable/color_cusor" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_edit_task_name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_10dp"
            android:hint="@string/name"
            android:textColorHint="@color/color_text_add_task"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:boxStrokeColor="@drawable/material_edit_text_stroke_color"
            app:boxStrokeWidth="2dp"
            app:hintTextColor="@color/color_text_add_task"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout_edit_task_project">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_task_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="monospace"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="textCapSentences"
                android:maxLines="1"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textCursorDrawable="@drawable/color_cusor" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_edit_task_description"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="@dimen/margin_10dp"
            android:hint="@string/description"
            android:textColorHint="@color/color_text_add_task"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:boxStrokeColor="@drawable/material_edit_text_stroke_color"
            app:hintTextColor="@color/color_text_add_task"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout_edit_task_date">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_task_description"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="monospace"
                android:gravity="top"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="textMultiLine|textCapSentences"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textCursorDrawable="@drawable/color_cusor" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_edit_task_tag"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_10dp"
            android:hint="@string/tag"
            android:textColorHint="@color/color_text_add_task"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:boxStrokeColor="@drawable/material_edit_text_stroke_color"
            app:hintTextColor="@color/color_text_add_task"
            app:layout_constraintTop_toBottomOf="@id/layout_edit_task_name">

            <AutoCompleteTextView
                android:id="@+id/edit_task_dropdown"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="monospace"
                android:inputType="none"
                android:textColor="@color/white" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_edit_task_date"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_10dp"
            android:hint="@string/deadline"
            android:textColorHint="@color/color_text_add_task"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:boxStrokeColor="@drawable/material_edit_text_stroke_color"
            app:boxStrokeWidth="2dp"
            app:hintTextColor="@color/color_text_add_task"
            app:layout_constraintTop_toBottomOf="@id/layout_edit_task_tag">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_task_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:editable="false"
                android:fontFamily="monospace"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="none"
                android:maxLines="1"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textCursorDrawable="@drawable/color_cusor" />
        </com.google.android.material.textfield.TextInputLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_edit_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/margin_15dp"
        android:contentDescription="@string/fab_content"
        app:fabSize="auto"
        app:srcCompat="@drawable/ic_baseline_done_24"
        tools:ignore="VectorDrawableCompat" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>