<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.authentication.sign_up.RegisterFragment">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lav_register"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_fileName="anim_greeting.json"
        app:lottie_loop="false" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_email_register"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size50dp"
        android:layout_marginStart="@dimen/size50dp"
        android:layout_marginTop="@dimen/size_20dp"
        android:layout_marginEnd="@dimen/size50dp"
        android:hint="@string/email"
        android:textColorHint="@color/color_login"
        app:layout_constraintTop_toBottomOf="@id/lav_register"
        app:startIconContentDescription="@string/email"
        app:startIconDrawable="@drawable/ic_baseline_email_24"
        app:startIconTint="@color/color_login">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_email_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_password_register"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size50dp"
        android:layout_marginStart="@dimen/size50dp"
        android:layout_marginTop="@dimen/size_20dp"
        android:layout_marginEnd="@dimen/size50dp"
        android:hint="@string/password"
        android:textColorHint="@color/color_login"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/color_login"
        app:layout_constraintTop_toBottomOf="@id/layout_email_register"
        app:startIconContentDescription="@string/password"
        app:startIconDrawable="@drawable/ic_baseline_lock_24"
        app:startIconTint="@color/color_login">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_password_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_password_cf_register"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size50dp"
        android:layout_marginStart="@dimen/size50dp"
        android:layout_marginTop="@dimen/size_20dp"
        android:layout_marginEnd="@dimen/size50dp"
        android:hint="@string/password"
        android:textColorHint="@color/color_login"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/color_login"
        app:layout_constraintTop_toBottomOf="@id/layout_password_register"
        app:startIconContentDescription="@string/password"
        app:startIconDrawable="@drawable/ic_baseline_lock_24"
        app:startIconTint="@color/color_login">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_password_cf_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_register"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size50dp"
        android:layout_marginStart="@dimen/size50dp"
        android:layout_marginTop="@dimen/size_20dp"
        android:layout_marginEnd="@dimen/size50dp"
        android:backgroundTint="@color/btn_login_color"
        android:fontFamily="sans-serif-medium"
        android:text="@string/register"
        android:textColor="@color/white"
        app:cornerRadius="@dimen/size_5dp"
        app:layout_constraintTop_toBottomOf="@id/layout_password_cf_register" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/btn_register">

        <TextView
            android:id="@+id/text_or_sign_in_with"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or_sign_in_with"
            android:textSize="@dimen/size_16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_10dp"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintTop_toBottomOf="@id/text_or_sign_in_with">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/btn_login_with_google"
                android:layout_width="@dimen/size50dp"
                android:layout_height="@dimen/size50dp"
                android:src="@drawable/ic_facebook"
                app:layout_constraintEnd_toStartOf="@id/btn_login_with_facebook"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/btn_login_with_facebook"
                android:layout_width="@dimen/size50dp"
                android:layout_height="@dimen/size50dp"
                android:src="@drawable/ic_search"
                app:layout_constraintEnd_toStartOf="@id/btn_login_with_twitter"
                app:layout_constraintStart_toEndOf="@id/btn_login_with_google"
                app:layout_constraintTop_toTopOf="parent" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/btn_login_with_twitter"
                android:layout_width="@dimen/size50dp"
                android:layout_height="@dimen/size50dp"
                android:src="@drawable/ic_twitter"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/btn_login_with_facebook"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>