<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_15dp"
    android:background="@color/main_background"
    android:theme="@style/Theme.ToDoApp"
    app:layout_constraintHorizontal_chainStyle="spread"
    tools:context=".ui.main.project.AddProjectFragment">


    <TextView
        android:id="@+id/text_add_project"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/margin_start"
        android:layout_marginTop="@dimen/margin_start"
        android:fontFamily="monospace"
        android:text="@string/text_add_project"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_add_project_name"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_10dp"
        android:hint="@string/name"
        android:textColorHint="@color/color_text_add_task"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:boxStrokeColor="@drawable/material_edit_text_stroke_color"
        app:boxStrokeWidth="2dp"
        app:hintTextColor="@color/color_text_add_task"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_add_project">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_add_project_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="textCapSentences"
            android:maxLines="1"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textCursorDrawable="@drawable/color_cusor" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_add_project_description"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_10dp"
        android:hint="@string/description"
        android:textColorHint="@color/color_text_add_task"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:boxStrokeColor="@drawable/material_edit_text_stroke_color"
        app:hintTextColor="@color/color_text_add_task"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_add_project_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_add_task_description"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="monospace"
            android:gravity="top"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="textMultiLine|textCapSentences"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textCursorDrawable="@drawable/color_cusor" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_10dp"
        android:backgroundTint="#FF0000"
        android:text="Cancel"
        android:textColor="@color/white"
        app:cornerRadius="@dimen/margin_15dp"
        app:icon="@drawable/ic_baseline_cancel_24"
        app:iconTint="@color/white"
        app:layout_constraintEnd_toStartOf="@id/btn_submit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_add_project_description" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_10dp"
        android:backgroundTint="@color/blue500"
        android:text="Ok"
        app:cornerRadius="@dimen/margin_15dp"
        app:icon="@drawable/ic_baseline_done_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_cancel"
        app:layout_constraintTop_toBottomOf="@id/layout_add_project_description" />
</androidx.constraintlayout.widget.ConstraintLayout>
